# motion

./: README.txt  setup_env.bash  start_cmd.txt  start_module.sh
camera_calibration/: publish_object_to_calibration_board.py
camera_calibration/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
camera_calibration/log/: latest_build
camera_calibration/src/konka_camera_description/: package.xml  setup.cfg  setup.py
camera_to_robot_calibration/: README.md  package.xml  setup.cfg  setup.py
camera_to_robot_calibration/camera_to_robot_calibration/: calibration.py
camera_to_robot_calibration/camera_to_robot_calibration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
curobo/src/nvidia_curobo.egg-info/: PKG-INFO  SOURCES.txt
emotor_interfaces/: CMakeLists.txt  package.xml
emotor_interfaces/msg/: ControlCommand.msg
ethercat_controller/.history/: CMakeLists_20241211111741.txt  CMakeLists_20241213131420.txt  CMakeLists_20241213132624.txt  CMakeLists_20241213132630.txt  CMakeLists_20241213132631.txt  CMakeLists_20241213132636.txt  CMakeLists_20241213132637.txt  CMakeLists_20241213132640.txt  CMakeLists_20241213132644.txt  CMakeLists_20241213132648.txt  CMakeLists_20241213132649.txt  CMakeLists_20241213132653.txt  CMakeLists_20241213132938.txt  CMakeLists_20241213133134.txt  CMakeLists_20241213133137.txt  CMakeLists_20241213133316.txt  CMakeLists_20241213133937.txt  CMakeLists_20241213134142.txt  CMakeLists_20241213134144.txt  CMakeLists_20241213134219.txt  CMakeLists_20241213134715.txt  CMakeLists_20241213134742.txt  CMakeLists_20241213144756.txt  CMakeLists_20241213144758.txt  CMakeLists_20241213144802.txt  CMakeLists_20241213144804.txt  CMakeLists_20241213144807.txt  CMakeLists_20241213144810.txt  CMakeLists_20241213145004.txt  CMakeLists_20241213145254.txt  CMakeLists_20241213145308.txt  CMakeLists_20241213145313.txt  CMakeLists_20241213145315.txt  CMakeLists_20241213150046.txt  CMakeLists_20241213150303.txt  CMakeLists_20241213150304.txt  CMakeLists_20241213151314.txt  package_20241211111741.xml  package_20241213131445.xml  package_20241213132358.xml  (+3 more)
ethercat_controller/.history/src/: ethercat_controller_20241211134220.cpp  ethercat_controller_20241213113525.cpp  ethercat_controller_20241213113608.cpp  ethercat_controller_20241213141350.cpp  ethercat_controller_20241213141353.cpp  ethercat_controller_20241213141359.cpp  ethercat_controller_20241213141605.cpp  ethercat_controller_20241213141607.cpp  ethercat_controller_20241213141610.cpp  ethercat_controller_20241213141744.cpp  ethercat_controller_20241213144655.cpp  ethercat_controller_20241213144703.cpp  ethercat_controller_20241213144709.cpp  ethercat_controller_20241213144716.cpp  ethercat_controller_20241213144738.cpp  ethercat_controller_20241213151445.cpp  ethercat_controller_20241213151449.cpp  main_20241210135628.cpp  main_20241213112500.cpp
ethercat_controller/src/: command.cpp  config.h  copy.cpp  ethercat_controller.cpp  motor_control.c  motor_control.h  transmit.cpp  transmit.h
gongga_core/: README.md  setup.cfg
gongga_core/gongga_core/: detect_aruco_markers_backup.py  gongga_driver.py  joint_trajectory_server.py
gongga_core/gongga_core/helpers/: diver_helper.py
gongga_core/launch/: ray_aruco.launch.py
gongga_interface/: CMakeLists.txt
gongga_interface/srv/: GeneratePlan.srv
gongga_interface/srv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
gongga_interface/srv/log/: latest_build
grasp_get_interfaces/: CMakeLists.txt
grasp_get_interfaces/srv/: GetPose.srv  GetPose_copy.srv
grasp_object/: package.xml  setup.cfg  setup.py
grasp_object/grasp_object/: grasp_object_client copy.py  grasp_object_client.py  grasp_object_client_copy1.py
grasp_object/grasp_object.egg-info/: PKG-INFO  SOURCES.txt  grasp_object_client.py  top_level.txt
grasp_object/interfaces/grasp_get_interfaces/: CMakeLists.txt  (+1 more)
graspnet_generator/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
graspnet_generator/graspnet_generator/: .graspnet_generator_node.py.swp  graspnet_generator_node.py  graspnet_generator_node_copy.py  requirements.txt
graspnet_generator/graspnet_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
graspnet_generator/graspnet_generator/utils/: data_utils.py
graspnet_generator/srv/: GetPose_copy.srv
konka2_description/: package.xml  setup.cfg  setup.py
konka2_description/urdf/: konka_calibrated.urdf  link_right_finger_tip.STL
motion_generator/: package.xml  setup.cfg  setup.py
motion_generator/data/: collision_body.yml
motion_generator/motion_generator/: motion_generator.py  stable_motion_generator.py
motion_generator/test/: object_motion_generator.py  stable_motion_generator.py
motor_interface/: CMakeLists.txt
motor_interface/msg/: EEPos.msg  VelAndPose.msg
motor_interface/srv/: GetJointState.srv
my_brain/my_brain/: brain.py
src/gongga_core/: package.xml  setup.py
src/gongga_core/config/: ray_marker_dict.yaml
src/gongga_core/gongga_core/: detect_aruco_markers.py  gongga_driver.py  joint_trajectory_server.py
src/gongga_core/gongga_core/helpers/: diver_helper.py
src/grasp_get_interfaces/: CMakeLists.txt
src/grasp_object/: README.md
src/motion_generator/: setup.py
src/motor_interface/: CMakeLists.txt  package.xml
src/motor_interface/docs/: 电机驱动相关消息类型.md
src/motor_interface/motor_controller/: CMakeLists.txt  package.xml
src/motor_interface/motor_controller/include/lichuan_stepper_motor/: joint_state_publisher.hpp  motor_controller.hpp
src/motor_interface/motor_controller/src/: joint_state_publisher.cpp
src/motor_interface/motor_controller/src/feetech_servo_motor/: SCS.cpp  SMS_STS.cpp  motor_controller_node.cpp
src/my_brain/: package.xml  setup.cfg  setup.py
src/sim_driver/: package.xml  setup.cfg  setup.py
(+66 files in other folders)
