<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gongga_core</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhangxianglin17@outlook.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>

  <exec_depend>python3-transforms3d</exec_depend>
  <depend>action_msgs</depend>
  <exec_depend>gongga_interface</exec_depend>
  <exec_depend>motor_interface</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
